Bug 287324 - No slideshow in slideshow
Summary: No slideshow in slideshow
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 256916 278809 279152 285367 287325 287954 289042 291942 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-11-23 00:47 UTC by imaginationsway
Modified: 2012-01-19 12:10 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (8.31 KB, text/plain)
2011-11-28 17:55 UTC, Martin Gabel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description imaginationsway 2011-11-23 00:47:30 UTC
Application: plasma-overlay (0.0)
KDE Platform Version: 4.7.2 (4.7.2)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-13-generic x86_64
Distribution: Ubuntu 11.10

-- Information about the crash:
- What I was doing when the application crashed: I was setting up the wigits on the slideshow screensaver. I added the pictureframe wigit

- Custom settings of the application:

once the wigit was added I entered the pictureframe settings and selected slideshow. That was when it crashed. I tried it two more times with the same results. Find this a little strange considering I could do this with earlier versions of kubuntu

-- Backtrace:
Application: Plasma for the Screensaver (plasma-overlay), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f805de247a0 (LWP 2640))]

Thread 2 (Thread 0x7f8036a18700 (LWP 2643)):
#0  0x00007f805a846773 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f8053311f68 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f8053312429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f805bc8df3e in QEventDispatcherGlib::processEvents (this=0x2a65fd0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007f805bc61cf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f805bc61ef7 in QEventLoop::exec (this=0x7f8036a17db0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007f805bb7927f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#7  0x00007f805bc44cbf in QInotifyFileSystemWatcherEngine::run (this=0x2a653b0) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f805bb7bd05 in QThreadPrivate::start (arg=0x2a653b0) at thread/qthread_unix.cpp:331
#9  0x00007f8053e1eefc in start_thread (arg=0x7f8036a18700) at pthread_create.c:304
#10 0x00007f805a85289d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f805de247a0 (LWP 2640)):
[KCrash Handler]
#6  0x00007f805bab1340 in typeinfo for QImageIOHandler () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#7  0x00007f805c85cab9 in KConfigDialogManager::isDefault (this=0x31e3d00) at ../../kdeui/dialogs/kconfigdialogmanager.cpp:529
#8  0x00007f805c85791f in _k_updateButtons (this=0x31cfa60) at ../../kdeui/dialogs/kconfigdialog.cpp:234
#9  KConfigDialog::KConfigDialogPrivate::_k_updateButtons (this=0x31cfa60) at ../../kdeui/dialogs/kconfigdialog.cpp:216
#10 0x00007f805d810fa5 in settingsModified (modified=true, this=0x3154e70) at ../../plasma/private/applet_p.h:63
#11 Plasma::AppletConfigDialog::qt_metacall (this=0x3154e70, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fff043069a0) at ./private/applet_p.moc:75
#12 0x00007f805bc75eba in QMetaObject::activate (sender=0x31ec490, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff043069a0) at kernel/qobject.cpp:3278
#13 0x00007f805b3e3a51 in QComboBox::currentIndexChanged (this=<optimized out>, _t1=1) at .moc/release-shared/moc_qcombobox.cpp:302
#14 0x00007f805b3e3ab7 in QComboBoxPrivate::_q_emitCurrentIndexChanged (this=0x31ec4e0, index=...) at widgets/qcombobox.cpp:1269
#15 0x00007f805b3e3c09 in QComboBoxPrivate::setCurrentIndex (this=0x31ec4e0, mi=<optimized out>) at widgets/qcombobox.cpp:2027
#16 0x00007f805b3e4834 in QComboBoxPrivate::_q_itemSelected (this=0x31ec4e0, item=...) at widgets/qcombobox.cpp:1238
#17 0x00007f805b3e7cb7 in QComboBox::qt_metacall (this=0x31ec490, _c=QMetaObject::InvokeMetaMethod, _id=12, _a=0x7fff04306bb0) at .moc/release-shared/moc_qcombobox.cpp:191
#18 0x00007f805c9a8ff5 in KComboBox::qt_metacall (this=0x31ec490, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fff04306bb0) at ./kcombobox.moc:106
#19 0x00007f805bc75eba in QMetaObject::activate (sender=0x331c7d0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff04306bb0) at kernel/qobject.cpp:3278
#20 0x00007f805b685592 in QComboBoxPrivateContainer::itemSelected (this=<optimized out>, _t1=<optimized out>) at .moc/release-shared/moc_qcombobox_p.cpp:213
#21 0x00007f805b3dee9a in QComboBoxPrivateContainer::eventFilter (this=0x331c7d0, o=0x31be360, e=0x7fff04307200) at widgets/qcombobox.cpp:687
#22 0x00007f805bc62c88 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<optimized out>, receiver=0x31be360, event=0x7fff04307200) at kernel/qcoreapplication.cpp:902
#23 0x00007f805b0133ef in notify_helper (e=0x7fff04307200, receiver=0x31be360, this=0x205d190) at kernel/qapplication.cpp:4482
#24 QApplicationPrivate::notify_helper (this=0x205d190, receiver=0x31be360, e=0x7fff04307200) at kernel/qapplication.cpp:4458
#25 0x00007f805b018c6b in QApplication::notify (this=<optimized out>, receiver=0x31be360, e=0x7fff04307200) at kernel/qapplication.cpp:4047
#26 0x00007f805c911126 in KApplication::notify (this=0x204a850, receiver=0x31be360, event=0x7fff04307200) at ../../kdeui/kernel/kapplication.cpp:311
#27 0x00007f805bc62afc in QCoreApplication::notifyInternal (this=0x204a850, receiver=0x31be360, event=0x7fff04307200) at kernel/qcoreapplication.cpp:787
#28 0x00007f805b0143f2 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#29 QApplicationPrivate::sendMouseEvent (receiver=0x31be360, event=0x7fff04307200, alienWidget=0x31ee8d0, nativeWidget=0x3154e70, buttonDown=0x0, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3146
#30 0x00007f805b094001 in QETWidget::translateMouseEvent (this=0x3154e70, event=<optimized out>) at kernel/qapplication_x11.cpp:4502
#31 0x00007f805b0928be in QApplication::x11ProcessEvent (this=0x204a850, event=0x7fff04307a20) at kernel/qapplication_x11.cpp:3690
#32 0x00007f805b0bb412 in x11EventSourceDispatch (s=0x2060170, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#33 0x00007f8053311a5d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#34 0x00007f8053312258 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#35 0x00007f8053312429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#36 0x00007f805bc8ded6 in QEventDispatcherGlib::processEvents (this=0x1ff5f40, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#37 0x00007f805b0bb07e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#38 0x00007f805bc61cf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#39 0x00007f805bc61ef7 in QEventLoop::exec (this=0x7fff04307df0, flags=...) at kernel/qeventloop.cpp:201
#40 0x00007f805bc66789 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#41 0x000000000040f15b in main (argc=2, argv=0x7fff043081a8) at ../../../../plasma/screensaver/shell/main.cpp:58

Reported using DrKonqi
Comment 1 Aaron J. Seigo 2011-11-23 10:07:12 UTC
*** Bug 287325 has been marked as a duplicate of this bug. ***
Comment 2 Aaron J. Seigo 2011-11-23 10:07:52 UTC
does the picture frame widget work properly on the desktop? does it also cause crashes there as well, or is it only when placed on the screen saver?
Comment 3 Beat Wolf 2011-11-23 19:56:47 UTC
*** Bug 285367 has been marked as a duplicate of this bug. ***
Comment 4 Beat Wolf 2011-11-23 19:56:51 UTC
*** Bug 278809 has been marked as a duplicate of this bug. ***
Comment 5 imaginationsway 2011-11-24 18:33:11 UTC
tried it on the desktop and the picture frame wigit works without a problem

On Wed, Nov 23, 2011 at 5:07 AM, Aaron J. Seigo <aseigo@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=287324
>
>
>
>
>
> --- Comment #2 from Aaron J. Seigo <aseigo kde org>  2011-11-23 10:07:52
> ---
> does the picture frame widget work properly on the desktop? does it also
> cause
> crashes there as well, or is it only when placed on the screen saver?
>
> --
> Configure bugmail: https://bugs.kde.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You reported the bug.
>
Comment 6 Martin Gabel 2011-11-28 17:55:16 UTC
Created attachment 66159 [details]
New crash information added by DrKonqi

plasma-overlay (0.0) on KDE Platform 4.7.2 (4.7.2) using Qt 4.7.4

- What I was doing when the application crashed: I was attempting to configure the bubblemon widget on the screensaver

-- Backtrace (Reduced):
#7  0x0109c295 in KConfigDialogManager::isDefault (this=0xa18ff30) at ../../kdeui/dialogs/kconfigdialogmanager.cpp:529
#8  0x010965dc in _k_updateButtons (this=0xa0d4a68) at ../../kdeui/dialogs/kconfigdialog.cpp:234
#9  KConfigDialog::KConfigDialogPrivate::_k_updateButtons (this=0xa0d4a68) at ../../kdeui/dialogs/kconfigdialog.cpp:216
#10 0x010966ee in KConfigDialog::updateButtons (this=0x9a9af30) at ../../kdeui/dialogs/kconfigdialog.cpp:314
#11 0x001b106d in settingsModified (modified=true, this=0x9a9af30) at ../../plasma/private/applet_p.h:63
Comment 7 Aaron J. Seigo 2011-12-01 08:18:12 UTC
*** Bug 287954 has been marked as a duplicate of this bug. ***
Comment 8 Aaron J. Seigo 2011-12-01 16:01:44 UTC
*** Bug 256916 has been marked as a duplicate of this bug. ***
Comment 9 Aaron J. Seigo 2011-12-01 16:04:15 UTC
*** Bug 279152 has been marked as a duplicate of this bug. ***
Comment 10 Aaron J. Seigo 2011-12-01 16:13:35 UTC
Git commit d0f46b11941a9d2e4cf6742639d31be90bcdf1d6 by Aaron Seigo.
Committed on 01/12/2011 at 17:12.
Pushed by aseigo into branch 'KDE/4.7'.

set the parent of the config skeleton object to be the dialog

BUG:287324

M  +6    -1    plasma/applet.cpp

http://commits.kde.org/kdelibs/d0f46b11941a9d2e4cf6742639d31be90bcdf1d6
Comment 11 Aaron J. Seigo 2011-12-02 20:53:21 UTC
Git commit f471e6da5e11dfde63b182d728c97766d44b1201 by Aaron Seigo.
Committed on 01/12/2011 at 17:12.
Pushed by aseigo into branch 'frameworks'.

set the parent of the config skeleton object to be the dialog

BUG:287324

M  +6    -1    plasma/applet.cpp

http://commits.kde.org/kdelibs/f471e6da5e11dfde63b182d728c97766d44b1201
Comment 12 Anne-Marie Mahfouf 2011-12-15 15:42:20 UTC
*** Bug 289042 has been marked as a duplicate of this bug. ***
Comment 13 Thijs 2012-01-19 12:10:05 UTC
*** Bug 291942 has been marked as a duplicate of this bug. ***