set the parent of the config skeleton object to be the dialog

BUG:287324